--- a/web/welcome.html
+++ b/web/welcome.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <title>welcome</title>
+    <title>Welcome</title>
     <link rel="stylesheet" type="text/css" href="css/welcome.css">
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="fonts/ionicons/css/ionicons.css"> 
+    <link rel="stylesheet" type="text/css" href="fonts/ionicons/css/ionicons.css"> 
 </head>
 
 <body>
@@ -138,8 +138,9 @@
     </div>
 
     <div class="footer">
-      <a href="/topicLink.html"><i class="icon ion-chevron-down"></i></a>
+      <a href="topicLink.html"><i class="icon ion-chevron-down"></i></a>
     </div>
+    
 </body>
 
 </html>
