--- a/web/welcome.html
+++ b/web/welcome.html
@@ -138,7 +138,14 @@
     </div>
 
     <div class="footer">
-      <a href="topicLink.html"><i class="icon ion-chevron-down"></i></a>
+        <div class="container">
+        <a href="topicLink.html">
+          <div class="chevron"></div>
+          <div class="chevron"></div>
+          <div class="chevron"></div>
+          </a>
+        </div>
+     
     </div>
     
 </body>
