--- a/web/topicLink.html
+++ b/web/topicLink.html
@@ -77,9 +77,9 @@
                             <!-- Navigation -->
                             <div class="android-navigation-container">
                                 <nav class="android-navigation mdl-navigation">
-                                    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Topics</a>
-                                    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Another Me</a>
-                                    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">About Us</a>
+                                    <a class="mdl-navigation__link mdl-typography--text-uppercase" id="topics" href="javascript:void(0);">Topics</a>
+                                    <a class="mdl-navigation__link mdl-typography--text-uppercase" id="another" href="javascript:void(0);">Another Me</a>
+                                    <a class="mdl-navigation__link mdl-typography--text-uppercase" id="about" href="about.html">About Us</a>
                                 </nav>
                             </div>
                             <span class="android-mobile-title mdl-layout-title">
@@ -103,6 +103,7 @@
         <script src="js/jquery.dlmenu.js"></script>
         <script src="js/pagetransitions.js"></script>
         <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
