another me canvas

--- a/web/about.html
+++ b/web/about.html
@@ -9,12 +9,12 @@
     <meta name="renderer" content="webkit">
     <title>About Us</title>
     <link href="./about/demo.css" rel="stylesheet" media="all">
-    <script src="./about/pace.min.js" charset="gbk"></script>
+    <script src="./js/pace.min.js" charset="gbk"></script>
     <link rel="stylesheet" type="text/css" href="fonts/ionicons/css/ionicons.css">
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.min.css">
     <link href="./about/pace-theme-barber-shop.css" rel="stylesheet">
-    <script src="./about/jquery.min.js"></script>
-    <script src="./about/jquery.qrcode.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/jquery.qrcode.min.js"></script>
     <script type="text/javascript">
     var theme_list_open = false;
 
