--- a/web/about/about-frame.html
+++ b/web/about/about-frame.html
@@ -66,7 +66,7 @@
         </article>
         <i class="fa fa-close strip__close" style="transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s;"></i>
     </section>
-    <script src="./jquery-1.8.3.min.js" type="text/javascript"></script>
+    <script src="../js/jquery-1.8.3.min.js" type="text/javascript"></script>
     <script>
     var Expand = function() {
         var tile = $('.strips__strip');
