Add Interface '20 Top Topics' into welcome page

--- a/web/welcome.html
+++ b/web/welcome.html
@@ -124,16 +124,34 @@
         <div class="malarkey"></div>
         <script src="js/malarkey.min.js"></script>
         <script>
-        var elem = document.querySelector('.malarkey');
-        var opts = {
-            typeSpeed: 50,
-            deleteSpeed: 50,
-            pauseDelay: 2000,
-            loop: true,
-            postfix: ''
-        };
-        malarkey(elem, opts).type('Say hello').pause().delete()
-            .type('Wave goodbye').pause().delete();
+            $.ajax({
+                type: 'POST',
+                url: 'http://localhost:8888/reboot',
+                dataType: 'json',
+                success: function(data){
+                    if (data.studentSuccess == false) {
+                        alert("学生重置失败");
+                    } else if (data.teacherSuccess == false) {
+                        alert("教师重置失败");
+                    } else {
+                        alert("重置成功，请手动删除对应Excel及图片");
+                    }
+                },
+                error: function(xhr, type){
+                    console.log(xhr);
+                    alert('Ajax error!')
+                }
+            });
+            var elem = document.querySelector('.malarkey');
+            var opts = {
+                typeSpeed: 50,
+                deleteSpeed: 50,
+                pauseDelay: 2000,
+                loop: true,
+                postfix: ''
+            };
+            malarkey(elem, opts).type('Say hello').pause().delete()
+                .type('Wave goodbye').pause().delete();
         </script>
     </div>
 
