--- a/web/topicLink.html
+++ b/web/topicLink.html
@@ -95,17 +95,20 @@
                         </div>
                     </div>
                     <div class="android-content mdl-layout__content" >
-                      <div id="main" style="height:800px;width: 100%;text-align: center"></div>
-                      <div id="anotherMe">
+                        <div id="main" style="height:800px;width: 100%;text-align: center"></div>
+                        <div id="js-notopic" class="android-be-together-section mdl-typography--text-center" style="display:none">
+                             <div class="logo-font android-slogan">No related topics !</div>
+                        </div>
+                        <div id="anotherMe">
                         <div id="arbor">
-                          <canvas id="sitemap" width="800" height="400"></canvas>
-                          <div id="docs">
-                              <div id="reference">
+                            <canvas id="sitemap" width="800" height="400"></canvas>
+                            <div id="docs">
+                                <div id="reference">
                                   
-                              </div>
-                          </div>
-                      </div>
-                      </div>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
                     </div>
                     
                 </div>
