--- a/web/topicLink.html
+++ b/web/topicLink.html
@@ -98,17 +98,18 @@
                         <div id="main" style="height:800px;width: 100%;text-align: center"></div>
                         <div id="js-notopic" class="android-be-together-section mdl-typography--text-center" style="display:none">
                              <div class="logo-font android-slogan">No related topics !</div>
+                             <div class="logo-font android-slogan" style="padding-top: 50px">Try other topics.</div>
                         </div>
-                        <div id="anotherMe">
+                      <div id="anotherMe">
                         <div id="arbor">
-                            <canvas id="sitemap" width="800" height="400"></canvas>
-                            <div id="docs">
-                                <div id="reference">
+                          <canvas id="sitemap" width="800" height="400"></canvas>
+                          <div id="docs">
+                              <div id="reference">
                                   
-                                </div>
-                            </div>
-                        </div>
-                        </div>
+                              </div>
+                          </div>
+                      </div>
+                      </div>
                     </div>
                     
                 </div>
@@ -117,8 +118,6 @@
         <script src="js/jquery.dlmenu.js"></script>
         <script src="js/pagetransitions.js"></script>
         <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-        <script src="js/bundle.js"></script>
         <!--another me-->
         <script src="js/jquery-1.8.3.min.js"></script>
         <script src="js/jquery.address-1.4.min.js"></script>
@@ -126,6 +125,7 @@
         <script src="js/lib/arbor-tween.js"></script>
         <script src="js/lib/arbor-graphics.js"></script>
         <script src="js/site.js"></script>
+        <script src="js/bundle.js"></script>
 </body>
 
 </html>
