--- a/web/topicLink.html
+++ b/web/topicLink.html
@@ -195,7 +195,7 @@
             opacity: "0.9", //弹幕默认透明度  
             top_botton_danmu_time: 6000 //顶端底端弹幕持续时间  
         });
-        $('#danmu').danmu('danmu_start');
+        //$('#danmu').danmu('danmu_start');
         </script>
         <script src="js/bundle.js"></script>
 </body>
